--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,10 @@
   "manifest_version": 2,
   "name": "bt",
   "version": "0.0.0",
+  "background":{
+    "scripts": ["background.js"]
+  },
+  "permissions": ["tabs"],
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
