--- a/manifest.json
+++ b/manifest.json
@@ -3,13 +3,7 @@
   "name": "bt",
   "version": "0.0.0",
   "background":{
-    "scripts": ["background.js"]
+    "scripts": ["build/js/background.js"]
   },
-  "permissions": ["tabs"],
-  "content_scripts": [
-    {
-      "matches": ["<all_urls>"],
-      "js": ["index.js"]
-    }
-  ]
+  "permissions": ["tabs"]
 }
