--- a/package.json
+++ b/package.json
@@ -7,5 +7,15 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "coffeeify": "^0.7.0",
+    "gulp": "^3.8.7",
+    "gulp-browserify": "^0.5.0",
+    "gulp-rename": "^1.2.0",
+    "gulp-watch": "^0.6.9"
+  },
+  "dependencies": {
+    "ramda": "^0.3.0"
+  }
 }
