--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp": "^3.8.7",
     "gulp-browserify": "^0.5.0",
     "gulp-rename": "^1.2.0",
+    "gulp-util": "^3.0.0",
     "gulp-watch": "^0.6.9"
   },
   "dependencies": {
