--- a/manifest.json
+++ b/manifest.json
@@ -5,5 +5,6 @@
   "background":{
     "scripts": ["build/js/background.js"]
   },
-  "permissions": ["tabs"]
+  "permissions": ["tabs"],
+  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
