--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "coffee src/coffee/server/app.coffee"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +18,11 @@
     "gulp-watch": "^0.6.9"
   },
   "dependencies": {
-    "ramda": "^0.3.0"
+    "express": "^4.8.4",
+    "ramda": "^0.3.0",
+    "sockjs": "^0.3.9",
+    "sockjs-browserify": "0.0.3",
+    "sockjs-client": "^0.1.3",
+    "socksjs": "^0.4.4"
   }
 }
