--- a/package.json
+++ b/package.json
@@ -18,7 +18,15 @@
     "gulp-watch": "^0.6.9"
   },
   "dependencies": {
+    "body-parser": "^1.6.4",
+    "cookie-parser": "^1.3.2",
     "express": "^4.8.4",
+    "express-session": "^1.7.5",
+    "googleapis": "^1.0.9",
+    "method-override": "^2.1.3",
+    "morgan": "^1.2.3",
+    "passport": "^0.2.0",
+    "passport-google-oauth": "^0.1.5",
     "ramda": "^0.3.0",
     "sockjs": "^0.3.9",
     "sockjs-browserify": "0.0.3",
