--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "passport": "^0.2.0",
     "passport-google-oauth": "^0.1.5",
     "ramda": "^0.3.0",
+    "rethinkdb": "^1.13.0-3",
     "sockjs": "^0.3.9",
     "sockjs-browserify": "0.0.3",
     "sockjs-client": "^0.1.3",
