--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.8.4",
     "express-session": "^1.7.5",
     "googleapis": "^1.0.9",
+    "jquery-browserify": "^1.8.1",
     "method-override": "^2.1.3",
     "morgan": "^1.2.3",
     "passport": "^0.2.0",
@@ -32,6 +33,7 @@
     "sockjs": "^0.3.9",
     "sockjs-browserify": "0.0.3",
     "sockjs-client": "^0.1.3",
-    "socksjs": "^0.4.4"
+    "socksjs": "^0.4.4",
+    "thinky": "^1.13.12"
   }
 }
